--- a/components/CreateBottleForm.module.css
+++ b/components/CreateBottleForm.module.css
@@ -16,7 +16,7 @@
   font-size: 1rem;
   text-align: center;
   color: var(--fg);
-  width: 220px;
+  width: min(80vw, 220px);
 }
 
 .promptInput {
