--- a/components/RoomSlugMarker.module.css
+++ b/components/RoomSlugMarker.module.css
@@ -12,6 +12,7 @@
   display: flex;
   flex-direction: column;
   gap: 2px;
+  max-width: min(70vw, 320px);
   padding-left: 4px;
   user-select: none;
 }
